--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -94,6 +94,7 @@ const historicalData = {
 
 <html lang="en">
   <head>
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Metal Dashboard</title>
